# mesh

./: .env.example  .gitignore  .goreleaser.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  GEMINI.md  LAUNCH_PLAN.md  LICENSE  MIGRATION-v0-to-v1.md  README.md  SECURITY.md  TODOS.md  conftest.py  go.mod  go.sum  mkdocs.yml  pyproject.toml  run_tests.sh
.antigravity/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  docs.yml  publish.yml  reusable-docker-build.yml  reusable-nomad-deploy.yml  test.yml
.mesh/: SESSION-LOG.md  governance.db  tmpal_011ng.db-shm
.pi/: taskplane.json
.sisyphus/: boulder.json  phase0-defects.md
.sisyphus/drafts/: discovery-update-plan.md  handoff.md  retrieval-system-design.md  unified-retrieval-architecture.md  v1-architecture.md  v1-gap-analysis.md  v2-roadmap-analysis.md
.sisyphus/evidence/: f1-content-audit.md  f1-plan-compliance-audit.md  f2-deliverables.txt  f3-edge-cases.txt  task-1-build.txt  task-1-cross-refs.txt  task-1-deps-check.txt  task-1-folder-structure.txt  task-1-goplugin-compat.txt  task-1-premerge-verify.txt  task-1-registry-happy-path.txt  task-1-registry-not-found.txt  task-1-smoke-test.txt  task-1-test.txt  task-10-agents-md.txt  task-10-commit.txt  task-10-plugin-compat.txt  task-10-plugin-orch.txt  task-10-start-stop.txt  task-11-merge.txt  task-11-snapshot.txt  task-12-logs-status.txt  task-12-tag.txt  task-13-cli.txt  task-13-verify.txt  task-14-migration.txt  task-15-migration.txt  task-16-migration.txt  task-17-plugin.txt  task-18-manager.txt  task-19-plugins-mcp.txt  task-2-cleanup.txt  task-2-db-schema.txt  task-2-determinism.txt  task-2-extension-discovery.txt  task-2-graph-traversal.txt  task-2-has-capability.txt  task-2-nomad-compat.txt  task-2-race.txt  task-2-round-trip.txt  (+37 more)
.sisyphus/plans/: close-out-v1-merge.md  mesh-nav-v2.md  mesh-nav.md  mesh-v0.md  mesh-v1-implementation.md  mesh-v1.md  release-plan.md  retrieval-system.md  v1-merge-to-main.md
Formula/: mesh.rb
assets/logo/: README.md
cmd/mesh/: main.go  main_test.go
cmd/mesh-daemon/: main.go
demo/: cluster.css  cluster.html  cluster.js  dashboard.css  dashboard.html  dashboard.js  demo-voiceover.txt  demo-walkthrough.js  destroy_do_cluster.py  index.html  provision_do_cluster.py  record-demo.js  script.js  styles.css  terminal-mock.js
discovery/: INDEX.md  constraints.md  decisions.md  intent.md  open-questions.md  personas.md
discovery/archive/: PORTING-GUIDE.md  SESSION-HANDOFF.md
discovery/design/: METHODOLOGY.md  SYSTEM.md  branch-prefix-id-collision.md
discovery/research/: agent-sandbox-k8s.md  daytona-analysis.md  e2b-internals.md  mcp-architecture.md  plugin-architecture.md  registry-strategy.md  snapshot-mechanics.md  substrate-adapter.md  substrate-landscape.md
discovery/roadmap/: v1.1-refinements.md
discovery/state/: decisions.md  governance-decisions.md  learnings.md  open-questions.md
docs/: README.md  architecture.md  cli-reference.md  comparisons.md  faq.md  index.md  mcp-api.md  migration.md  mint.json
docs/architecture/: overview.md
docs/assets/: README.md
docs/guides/: DEPLOY.md
docs/internal/: packages.md
docs/reference/: api.md  cli.md
docs/tutorials/: quickstart.md
integration/: integration_test.go  mock_adapter.go  mock_orchestrator.go  mock_registry.go
internal/adapter/: CONTEXT.md  adapter.go  adapter_test.go
internal/api/: bodies.go  errors.go  healthz.go  middleware.go  nodes.go  router.go  types.go
internal/body/: CONTEXT.md  body.go  body_test.go  manager.go  migration.go  migration_test.go
internal/config/: CONTEXT.md  config.go  config_test.go
internal/config-toml/: CONTEXT.md  config.go  config_test.go
internal/daemon/: CONTEXT.md  daemon.go  daemon_test.go
internal/docker/: CONTEXT.md  adapter.go  adapter_test.go
internal/ingress/: ingress.go  noop.go
internal/manifest/: CONTEXT.md  manifest.go  manifest_test.go
internal/mcp/: CONTEXT.md  handlers.go  mcp_test.go  server.go
internal/nomad/: adapter.go  adapter_test.go  compat_test.go
internal/orchestrator/: extensions.go  extensions_test.go  orchestrator.go  orchestrator_test.go
internal/persistence/: engine_test.go
internal/plugin/: compat_test.go  grpc.go  interface.go  manager.go  manager_test.go  plugin.pb.go  plugin.proto  plugin_grpc.pb.go  plugin_test.go
internal/provisioner/: extensions.go  extensions_test.go  provisioner.go  provisioner_test.go
internal/registry/: compat_test.go  plugin.go  pull.go  (+2 more)
scripts/: gemini-opinion.sh  install.sh
ux-context/: 04-personas-mvp-error-ux.md  05-body-metaphor-capabilities.md  06-code-implementation.md  08-cli-tools-snapshot-ux.md  09-product-vision-bootstrap.md
(+246 files in other folders)
